--- a/CoreProject/Views/Register/Index.cshtml
+++ b/CoreProject/Views/Register/Index.cshtml
@@ -1,51 +1,77 @@
-﻿
+﻿@model EntityLayer.Concrete.Writer
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/UserLayout.cshtml";
 }
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<script src="~/lib/jquery/dist/jquery.js"></script>
 
 <section class="main-content-w3layouts-agileits">
 	<div class="container">
 		<h3 class="tittle">Writer Register Page</h3>
 		<div class="inner-sec">
 			<div class="login p-5 bg-light mx-auto mw-100">
-				<form  method="post">
+				@using(Html.BeginForm("Index", "Register", FormMethod.Post)){
 					<div class="form-row">
 						<div class="col-md-6 mb-3">
-							<label for="validationCustom01">Name Surname</label>
+							<label for="validationCustom01" >Name Surname</label>
 
-							<input type="text" class="form-control" id="" name="WriterName" placeholder="" required="">
+							@* <input type="text" class="form-control" id="" name="WriterName" placeholder="" required=""> *@
+							
+							
+							@Html.TextBoxFor(x => x.WriterName ,new { @class = "form-control"})
+							@Html.ValidationMessageFor(c =>c.WriterName,"" , new {@class="text-danger"})
+
 						</div>
 						<div class="col-md-6 mb-3">
-							<label for="validationCustom02">Gmail</label>
-							<input type="email" class="form-control" id="" name="WriterMail" placeholder="" required="">
+							<label for="validationCustom02">Email</label>
+							@* <input type="email" class="form-control" id="" name="WriterMail" placeholder="" required=""> *@
+							@Html.TextBoxFor(x => x.WriterMail, new { @class = "form-control" })
+							@Html.ValidationMessageFor(x => x.WriterMail, "", new { @class = "text-danger" })
 						</div>
 					</div>
 					<div class="form-row">
 						<div class="form-group col-md-6">
 							<label for="exampleInputPassword1 mb-2">Password</label>
-							<input type="password" class="form-control" id=""  name="WriterPassword" placeholder="" required="">
+							@* <input type="password" class="form-control" id=""  name="WriterPassword" placeholder="" required=""> *@
+							@Html.TextBoxFor(x => x.WriterPassword, new { @class = "form-control" })
+							@Html.ValidationMessageFor(x => x.WriterPassword, "", new { @class = "text-danger" })
 						</div>
 						<div class="form-group col-md-6">
 							<label for="exampleInputPassword2 mb-2">Confirm Password</label>
-							<input type="password" class="form-control" id="" name="WriterPassword" placeholder="" required="">
+							@* <input type="password" class="form-control" id="" name="WriterPassword" placeholder="" required=""> *@
+							@Html.TextBoxFor(x => x.WriterPassword, new { @class = "form-control" })
+							@Html.ValidationMessageFor(x => x.WriterPassword, "", new { @class = "text-danger" })
 						</div>
 
 					</div>
 					<div class="form-row">
 						<div class="form-group col-md-12">
 							<label for="exampleInputPassword1 mb-2">Image Url</label>
-							<input type="text" class="form-control" id=""  name="WriterImage" placeholder="" required="">
+							@* <input type="text" class="form-control" id=""  name="WriterImage" placeholder="" required=""> *@
+							@Html.TextBoxFor(x => x.WriterImage, new { @class = "form-control" })
+							@Html.ValidationMessageFor(x => x.WriterImage, "", new { @class = "text-danger" })
 						</div>
 						
 
 					</div>
 					<button type="submit" class="btn btn-primary submit mb-4">Sign Up</button>
+					<p>
+						<a href="#" id="btn1">I agree to the terms and conditions.</a>
+					</p>
 					
-				</form>
+				}
 
 			</div>
 		</div>
 	</div>
+	<br />
+	<script>
+		$("#btn1").click(function () {
+			Swal.fire("Terms and Conditions", "By clicking I agree to the terms and conditions,  you confirm that you have read, understood, and accepted the stated policies and regulations.");
+        });
+	</script>
 </section>
 
