--- a/CoreProject/Views/Blog/BlogReadAll.cshtml
+++ b/CoreProject/Views/Blog/BlogReadAll.cshtml
@@ -69,19 +69,15 @@
 				<!--right-->
 				<aside class="col-lg-4 agileits-w3ls-right-blog-con text-right">
 					<div class="right-blog-info text-left">
+						
 						<div class="tech-btm">
 							<img src="~/CoreBlogTema/images/banner1.jpg" class="img-fluid" alt="">
-						</div>
-						<div class="tech-btm">
-							<h4>Sign up to our newsletter</h4>
-							<p>Pellentesque dui, non felis. Maecenas male </p>
-							<form action="#" method="post">
-								<input type="email" placeholder="Email" required="">
-								<input type="submit" value="Subscribe">
-							</form>
+						</div>					
+							<h4>Sign up to our Newsletter</h4>
+						@await Html.PartialAsync("~/Views/NewsLetter/SubscribeMail.cshtml")
 
-						</div>
 						@await Component.InvokeAsync("CategoryList")
+
 						@await Component.InvokeAsync("WriterLastBlog")
 
 						
