--- a/CoreProject/Views/Blog/BlogListByWriter.cshtml
+++ b/CoreProject/Views/Blog/BlogListByWriter.cshtml
@@ -1,7 +1,7 @@
-﻿@using EntityLayer.Concrete 
+﻿@using EntityLayer.Concrete
 @model List<Blog>
 @{
-    ViewData["Title"] = "BlogListByWriter";
+    ViewData ["Title"] = "BlogListByWriter";
     Layout = "~/Views/Shared/WriterLayout.cshtml";
 }
 
@@ -14,7 +14,7 @@
         <th>Category</th>
         <th>Status</th>
         <th>Edit</th>
-        <th>Delete</th>
+      @*   <th>Delete</th> *@
     </tr>
     @foreach (var item in Model)
     {
@@ -24,7 +24,7 @@
             <td>@(((DateTime)item.BlogCreateDate).ToString("dd.MM.yyyy"))</td>
             <td>@item.Category.CategoryName</td>
             <td>
-                @if (item.BlogStatus==true)
+                @if (item.BlogStatus == true)
                 {
                     <span class="badge badge-success">Active</span>
                 }
@@ -33,11 +33,38 @@
                     <span class="badge badge-secondary">Passive</span>
                 }
             </td>
-            <td><a href="#" class="btn btn-warning"> Edit</a></td>
-            <td><a href="#" class="btn btn-danger"> Delete</a></td>
+@*             <td><a href="/Blog/EditBlog/@item.BlogID" class="btn btn-warning"> Edit</a></td>
+ *@          @*   <td><a href="/Blog/BlogDelete/@item.BlogID" onclick="return confirm('Are you sure you want to delete?');" class="btn btn-danger"> Delete</a></td> *@
+            <!--Sil modal Butonu-->
+            @* <td>
+            <button type="button" class="btn btn-outline-danger btn-sm" data-toggle="modal" data-target="#Sil_@item.BlogID">
+                Sil
+            </button>
+
+            <!--Modal-->
+            <div class="modal fade" id="Sil_@item.BlogID" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">Blog Sil</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <h4>Bloğu silmek istiyor musunuz?</h4>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-info mx-4" data-dismiss="modal">Vazgeç</button>
+                            @Html.ActionLink("Sil", "BlogDelete", new { id = @item.BlogID }, new { @class = "btn btn-danger mx-4" })
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </td> *@
 
         </tr>
     }
 </table>
-<a href="/Blog/BlogAdd" class="btn btn-primary">Add New Blog</a>
+<a href="/Blog/BlogAdd/" class="btn btn-primary">Add New Blog</a>
 
