--- a/CoreProject/Views/Blog/BlogListByWriter.cshtml
+++ b/CoreProject/Views/Blog/BlogListByWriter.cshtml
@@ -33,8 +33,8 @@
                     <span class="badge badge-secondary">Passive</span>
                 }
             </td>
-@*             <td><a href="/Blog/EditBlog/@item.BlogID" class="btn btn-warning"> Edit</a></td>
- *@          @*   <td><a href="/Blog/BlogDelete/@item.BlogID" onclick="return confirm('Are you sure you want to delete?');" class="btn btn-danger"> Delete</a></td> *@
+           @*  <td><a href="/Blog/EditBlog/@item.BlogID" class="btn btn-warning"> Edit</a></td> *@
+          @*   <td><a href="/Blog/BlogDelete/@item.BlogID" onclick="return confirm('Are you sure you want to delete?');" class="btn btn-danger"> Delete</a></td> *@
             <!--Sil modal Butonu-->
             @* <td>
             <button type="button" class="btn btn-outline-danger btn-sm" data-toggle="modal" data-target="#Sil_@item.BlogID">
