--- a/CoreProject/Views/Dashboard/Index.cshtml
+++ b/CoreProject/Views/Dashboard/Index.cshtml
@@ -10,13 +10,7 @@
                 <i class="mdi mdi-home"></i>
             </span> Dashboard
         </h3>
-        <nav aria-label="breadcrumb">
-            <ul class="breadcrumb">
-                <li class="breadcrumb-item active" aria-current="page">
-                    <span></span>Overview <i class="mdi mdi-alert-circle-outline icon-sm text-primary align-middle"></i>
-                </li>
-            </ul>
-        </nav>
+        
     </div>
     <div class="row">
         <div class="col-md-4 stretch-card grid-margin">
@@ -26,7 +20,7 @@
                     <h4 class="font-weight-normal mb-3">
                         Total Blog Count <i class="mdi mdi-chart-line mdi-24px float-right"></i>
                     </h4>
-                    <h2 class="mb-5">0</h2>
+                    <h2 class="mb-5">@ViewBag.v1</h2>
                     <h6 class="card-text">Core 6.0 Project</h6>
                 </div>
             </div>
@@ -38,7 +32,7 @@
                     <h4 class="font-weight-normal mb-3">
                         Your Blog Count <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                     </h4>
-                    <h2 class="mb-5">0</h2>
+                    <h2 class="mb-5">@ViewBag.v2</h2>
                     <h6 class="card-text">Core 6.0 Project</h6>
                 </div>
             </div>
@@ -50,7 +44,7 @@
                     <h4 class="font-weight-normal mb-3">
                         Blog Count From Last Week <i class="mdi mdi-diamond mdi-24px float-right"></i>
                     </h4>
-                    <h2 class="mb-5">9</h2>
+                    <h2 class="mb-5">@ViewBag.v3</h2>
                     <h6 class="card-text">Core 6.0 Project</h6>
                 </div>
             </div>
